tools/message-compiler/src/compiler_rust/snapshots/message_compiler__compiler_rust__traits__tests__generate_enums_test.snap
---
source: src/compiler_rust/traits.rs
expression: "prettyplease::unparse(&syn::parse_file(&enums.to_string()).unwrap())"
---
#[derive(Serialize, Deserialize, Debug, Clone)]
pub enum Something {
    A { field_a: String },
    B { a: s16, b: String },
}

