tools/message-compiler/src/compiler_rust/snapshots/message_compiler__compiler_rust__traits__tests__generate_structs_test.snap
---
source: src/compiler_rust/traits.rs
expression: "prettyplease::unparse(&syn::parse_file(&structs.to_string()).unwrap())"
---
#[derive(Serialize, Deserialize, Debug, Clone)]
pub struct Foo {
    pub foo: u8,
    pub bar: u64,
}
#[derive(Serialize, Deserialize, Debug, Clone)]
pub struct Bar {
    pub foo: u8,
    pub bar: u64,
}

